edit page error fix